--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.1",
     "zone.js": "^0.8.4",
-    "webpack-dev-server": ">=3.1.11"
   },
   "devDependencies": {
     "@types/node": "^7.0.12",
@@ -45,7 +44,7 @@
     "to-string-loader": "^1.1.4",
     "typescript": "~2.2.0",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "2.4.2",
+    "webpack-dev-server": ">=3.1.11",
     "webpack-merge": "^4.1.0"
   },
   "keywords": [
